sw/qa/core/undo/undo.cxx
@@ -146,6 +146,36 @@ CPPUNIT_TEST_FIXTURE(SwCoreUndoTest, testImagePropsCreateUndoAndModifyDoc)
     CPPUNIT_ASSERT(!pWrtShell->GetLastUndoInfo(nullptr, nullptr, nullptr));
 }
 
+CPPUNIT_TEST_FIXTURE(SwCoreUndoTest, testAnchorTypeChangePosition)
+{
+    // Given a document with a textbox (draw + fly format pair) + an inner image:
+    createSwDoc("anchor-type-change-position.docx");
+    selectShape(1);
+    SwDoc* pDoc = getSwDoc();
+    const auto& rFormats = *pDoc->GetSpzFrameFormats();
+    CPPUNIT_ASSERT_EQUAL(static_cast<size_t>(3), rFormats.size());
+    Point aOldPos;
+    {
+        const SwFormatHoriOrient& rHoriOrient = rFormats[0]->GetHoriOrient();
+        const SwFormatVertOrient& rVertOrient = rFormats[0]->GetVertOrient();
+        aOldPos = Point(rHoriOrient.GetPos(), rVertOrient.GetPos());
+    }
+
+    // When changing the anchor type + undo:
+    dispatchCommand(mxComponent, ".uno:SetAnchorToChar", {});
+    dispatchCommand(mxComponent, ".uno:Undo", {});
+
+    // Then make sure the old position is also restored:
+    const SwFormatHoriOrient& rHoriOrient = rFormats[0]->GetHoriOrient();
+    const SwFormatVertOrient& rVertOrient = rFormats[0]->GetVertOrient();
+    Point aNewPos(rHoriOrient.GetPos(), rVertOrient.GetPos());
+    // Without the accompanying fix in place, this test would have failed with:
+    // - Expected: 789,213
+    // - Actual  : 1578,3425
+    // i.e. there was a big, unexpected increase in the vertical position after undo.
+    CPPUNIT_ASSERT_EQUAL(aOldPos, aNewPos);
+}
+
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
